istioctl/pkg/writer/compare/testdata/routediff.txt
Routes Don't Match (RDS last loaded at Tue, 19 Jun 2018 06:21:16 UTC)
--- Pilot Routes
+++ Envoy Routes
@@ -10,16 +10,14 @@
                   "domains": [
                      "istio-policy.istio-system.svc.cluster.local",
                      "istio-policy.istio-system.svc.cluster.local:15004",
                      "istio-policy.istio-system",
                      "istio-policy.istio-system:15004",
                      "istio-policy.istio-system.svc.cluster",
                      "istio-policy.istio-system.svc.cluster:15004",
-                     "istio-policy.istio-system.svc",
-                     "istio-policy.istio-system.svc:15004",
                      "172.21.193.112",
                      "172.21.193.112:15004"
                   ],
                   "routes": [
                      {
                         "match": {
                            "prefix": "/"
